eks-client/example/nginx/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx 
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
